html layout, navbar styles

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 
     <body>
         <section id="navbar">
-            <a href=#about>About</a>
-            <a href=#store>Store</a>
+            <div id="left-links">
+                <a href=#about>About</a>
+                <a href=#store>Store</a>
+            </div>
             <div id="nav-wrap">
                 <div id="nav">
-                    <a href=#gmail>Pmail</a>
-                    <a href=#images>Images</a>
-                    <div>apps</div>
-                    <div>profile</div>
+                    <div id="right-links">
+                        <a href=#gmail>Pmail</a>
+                        <a href=#images>Images</a>
+                    </div>  
+                    <div id="apps-icon" class="icon">apps</div>
+                    <div id="profile-icon" class="icon">profile</div>
                 </div>
             </div>
         </section>
