navbar CSS complete

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
             </div>
             <div id="nav-wrap">
                 <div id="nav">
-                    <div id="right-links">
-                        <a href=#gmail>Pmail</a>
-                        <a href=#images>Images</a>
-                    </div>  
-                    <div id="apps-icon" class="icon">apps</div>
-                    <div id="profile-icon" class="icon">profile</div>
+                    <div id="nav-links">
+                        <a class="nav-link" href=#gmail>Pmail</a>
+                        <a class="nav-link" href=#images>Images</a>
+                    </div>
+                    <div id="nav-icons">
+                        <div class="nav-icon">apps</div>
+                        <div class="nav-icon">profile</div>
+                    </div>
                 </div>
             </div>
         </section>
