added nav icons

--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
                         <a class="nav-link" href=#images>Images</a>
                     </div>
                     <div id="nav-icons">
-                        <div class="nav-icon">apps</div>
-                        <div class="nav-icon">profile</div>
+                        <div class="nav-icon">
+                            <a href="/" class="icon-btn" role="button">
+                                <img src="img/dots-menu.png" alt="apps" height="19px"/>
+                            </a>
+                        </div>
+                        <div class="nav-icon">
+                            <a href="/" class="icon-btn" role="button">
+                                <img src="img/user.png" alt="apps" height="25px"/>
+                            </a>
+                    </div>
                     </div>
                 </div>
             </div>
