--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section id="jumbo">
             <div id="logo-wrap">
-                logo img
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_dark_color_272x92dp.png" alt="Google">
             </div>
         </section>
 
